--- a/app/assets/javascripts/social-share-button.coffee.erb
+++ b/app/assets/javascripts/social-share-button.coffee.erb
@@ -2,6 +2,7 @@ $ ->
   $('.dyn_socical').each (i, obj) ->
     btn = $(this);
     $.get "<%= SocialShareButton::Engine.routes.url_helpers.root_path %>", {site: $(this).attr('data-type'), current_url: $(this).attr('data-url')}, (data) =>
+      console.log data
       btn.text data
       return
   return
