--- a/app/assets/javascripts/social-share-button.coffee.erb
+++ b/app/assets/javascripts/social-share-button.coffee.erb
@@ -1,15 +1,14 @@
 $ ->
   $('.dyn_socical').each (i, obj) ->
     btn = $(this);
-    $.get "<%= SocialShareButton::Engine.routes.url_helpers.root_path %>", {site: $(this).attr('data-type'), current_url: $(this).attr('data-url')}, (data) =>
+    $.get "<%= SocialShareButton::Engine.routes.url_helpers.root_path %>", {site: $(this).data('type'), current_url: $(this).data('url')}, (data) =>
       btn.text data
       return
 
   $(document).on 'click', '.click_sh', ->
-    console.log($(this))
     $parent = $(this).parent().parent()
     btn = $(this)
-    $.get "<%= SocialShareButton::Engine.routes.url_helpers.reset_share_count_path %>", {site: $(this).attr('data-site'), current_url: $parent.data("url")}, (data) =>
+    $.get "<%= SocialShareButton::Engine.routes.url_helpers.reset_share_count_path %>", {site: $(this).data('site'), current_url: $parent.data("url"), share_object_id: $parent.data('object-id'), share_object_class: $parent.data('object-class')}, (data) =>
       return
   return
 
